# image_search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
client/: Cargo.toml  index.html
client/.cargo/: config.toml
client/src/: app.rs  header.rs  image_card.rs  image_grid.rs  image_modal.rs  main.rs
clip/: Cargo.toml  build.rs
clip/benches/: clip_bench.rs
clip/src/: lib.rs  text_embedder.rs  utils.rs
data/: Cargo.toml
data/src/: lib.rs
face_detection/: Cargo.toml  build.rs
face_detection/src/: face_age_and_gender_estimator.rs  face_detector.rs  face_embedder.rs  lib.rs
onnx_updater/: Cargo.toml
onnx_updater/python/: requirements.txt  upgrade_opset.py
onnx_updater/src/: lib.rs
picture_preprocessing/: Cargo.toml
picture_preprocessing/benches/: preprocessing_bench.rs
picture_preprocessing/src/: lib.rs  preprocess.wgsl  preprocessor.rs
server/: Cargo.toml  build.rs
server/benches/: server_bench.rs
server/src/: clip.rs  database.rs  lib.rs  main.rs  metadata_indexer.rs  search.rs  server_arguments.rs
server/src/metadata_provider/: age_and_gender_metadata_provider.rs  basic_metadata_provider.rs  face_recognition_metadata_provider.rs  image_embedding_metadata_provider.rs  image_hash_metadata_provider.rs  metadata_provider.rs  metadata_query_engine.rs  mod.rs
