[package]
name = "clip"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.1", features = ["wgpu"] }
burn-wgpu = { version = "0.19.1" }
image = "0.25.8"
embed_anything = "0.6.5"
log = "0.4.28"
anyhow = "1.0.99"

[build-dependencies]
burn-import = { version = "0.19.1", features = ["onnx", "safetensors", "pytorch", "default"] }
hf-hub = "0.4.3"
which = "8.0.0"


[dev-dependencies]
criterion = { version = "0.7.0", features = ["async", "async_futures"] }

[[bench]]
harness = false
name = "clip_bench"