[package]
name = "server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"


[dependencies]
clip = { path = "../clip" }
axum = { version = "0.8.4", features = ["macros"] }
tonic = { version = "0.14.1", features = ["transport"] }
tonic-web = "0.14.1"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
axum-server = "0.7.2"
env_logger = "0.11.8"
expanduser = "1.2.2"
log = "0.4.27"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
surrealdb = "2.3.7"
tracing = "0.1.41"
data = { path = "../data" }
embed_anything = { version = "0.6.5", features = [] }
walkdir = "2.5.0"
urlencoding = "2.1.3"
rand = "0.9.2"
burn = { version = "0.20.0-pre.6", features = ["wgpu", "vulkan", "webgpu"] }
burn-wgpu = { version = "0.20.0-pre.6" }
image = "0.25.8"
rayon = "1.11.0"
bytemuck = "1.23.2"
anyhow = "1.0.99"
face_detection = { path = "../face_detection" }

[profile.dev]
opt-level = 1               # Use slightly better optimizations, reduces debug build size
